--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -6,12 +6,20 @@
 	<div class="container">
 
 		<div class="tagline">
-			Find & build great resources. Save time. Increase impact.<br /><br />
+			Find & build great resources. Collaborate. Save time.<br /><br />
 			Meet your new learning network.
 		</div>
 
+	</div>
+</div>
 
-		<div class="sectr">
+
+
+
+
+
+<div class="container">
+		<div class="sectr" style="margin-top:-80px">
 
 			<div class="imgbox" style="float:left;margin-right:30px">
 				<%= image_tag('public/product/prof1.png', :style => "") %>
@@ -22,7 +30,7 @@
 					Collaborate with educators across the hall or across the globe.
 				</div>
 
-				Find Common Core lessons from awesome educators just like you and contribute your own. You can even work on lessons with other teachers in real time - let the collaboration begin!
+				You're no longer alone. Team up with great educators just like you and build lessons in real time, ask questions & share your rockstar teaching skills. Let the collaboration begin!
 
 			</div>
 
@@ -44,7 +52,7 @@
 					One place to store all of your resources.
 				</div>
 
-				Bookmarking, file sharing, and various other sites are a hassle to store class materials in. Claco allows you to store, and easily access, all of your websites, videos, files & more all in one place. You can even align resources with the <%= image_tag('public/core.png', :style => "margin: -2px 3px 0 0;width:130px") %>.
+				We all know the nightmare of storing class materials in multiple bookmarking & file sharing sites. Claco allows you to store, and easily access, all of your websites, videos, files & more all in one place. You can even align resources with the <%= image_tag('public/core.png', :style => "margin: -2px 3px 0 0;width:130px") %>.
 			</div>
 
 
@@ -65,7 +73,8 @@
 					One click to share with students, parents, and colleagues.
 				</div>
 
-				Sending large email attachments or uploading to a site every time you want to share cool resources with someone is a pain. With your materials already in one place, sharing with anyone and everyone takes no more than the click of a button!
+
+				With your resources already on Claco, it takes just a click to share with anyone and everyone! Say goodbye to sending large email attachments or uploading every time you want to share with others.
 			</div>
 
 
@@ -86,9 +95,4 @@
 			<a href="/apply" class="btn btn-success" style="margin-right:0px">Request a beta invite</a>
 		</div>
 
-
-
-
-
-	</div>
 </div>
