--- a/app/assets/stylesheets/home/pub/about.css.erb
+++ b/app/assets/stylesheets/home/pub/about.css.erb
@@ -1,29 +1,21 @@
-body {
-  background-image: url('<%= asset_path "public/product/bg.jpg" %>') !important;
+.splashback {
+  background-image: url('<%= asset_path "public/product/bk.jpg" %>');
   background-repeat:no-repeat;
-  background-attachment:fixed;
-  background-position:center; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-color:#33879D;
-}
+  background-position:center top; 
+  background-color:#5BA3B9;
 
+  height:250px;
+  border-bottom:1px solid #aaa;
+  margin-bottom:10px;
+}
 
 .splashback .tagline {
   font-size:32px;
   font-weight:bolder;
   color:#fff;
-  margin:45px 0 45px 0;
+  margin:35px 0 0 0;
   text-shadow: 0px 1px 1px #000;
   line-height: 1.1em;
-  padding:20px;
-  border:6px dotted #C2E2EA;
-
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
 }
 
 
@@ -81,7 +73,7 @@ body {
 .buttoners {
   margin-top:40px;
   padding:20px;
-  border:6px dotted #C2E2EA;
+  border:6px dotted #ccc;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
