--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -84,7 +84,10 @@
 
 
 
-<div class="announcer invitebox"><%= @invcount %>/5 Invites Used <a href="#" style="float:right" onclick="jQuery.facebox({ ajax: '/invite' });return false">Send invites</a></div>
+<div class="announcer invitebox">
+	<div class="progress <%= "progress-danger" if @size_percent_used > 60 %>"><div class="bar" style="width:<%= @size_percent_used %>%;"></div></div>
+	<%= @invcount %>/5 Invites Used <a href="#" style="float:right" onclick="jQuery.facebox({ ajax: '/invite' });return false">Send invites</a>
+</div>
 
 
 
