--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -86,7 +86,17 @@
 
 <div class="announcer invitebox">
 	<div class="progress <%= "progress-danger" if @size_percent_used > 60 %>"><div class="bar" style="width:<%= @size_percent_used %>%;"></div></div>
-	<%= @invcount %>/5 Invites Used <a href="#" style="float:right" onclick="jQuery.facebox({ ajax: '/invite' });return false">Send invites</a>
+	<span class="pull-right" style="margin-top:-16px;clear:all;"><small><%= @size_percent_used.to_i %>% of <%= number_to_human_size(current_teacher.size_cap) %> used.</small></span>
+	Looking for free storage?
+<!-- 	<%= @invcount %> Invites Used --><!-- 
+	<a href="#" style="float:right" onclick="jQuery.facebox({ ajax: '/invite' });return false">Invite Colleagues</a> -->
+	<div style="display:block;">
+		<ul class="pager">
+			<li class="pull-right">
+				<a href="#" onclick="jQuery.facebox({ ajax: '/invite' });return false">Invite &rarr;</a>
+			</li>
+		</ul>
+	</div>
 </div>
 
 
