--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,21 @@ footer {
   color:#666;
 }
 
+.invite-btn {
+  padding-top:5px;
+}
+
+.inlay {
+  margin-top:-2px;
+  text-align:right;
+  display:block;
+}
+
+.inlay small {
+  color:#999;
+  text-shadow:0 1px 0 #eee;
+}
+
 .publink {
   font-weight:bolder;
   color:#fff !important;
