--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -85,15 +85,17 @@
 
 
 <div class="announcer invitebox">
-	<div class="progress <%= "progress-danger" if @size_percent_used > 60 %>"><div class="bar" style="width:<%= @size_percent_used %>%;"></div></div>
-	<span class="pull-right" style="margin-top:-16px;clear:all;"><small><%= @size_percent_used.to_i %>% of <%= number_to_human_size(current_teacher.size_cap) %> used.</small></span>
-	Looking for free storage?
+	<div class="progress <%= "progress-danger" if @size_percent_used > 60 %>"><div class="bar" style="width:<%= @size_percent_used %>%;"></div>
+	</div>
+	<span class="inlay"><small><%= @size_percent_used.to_i %>% of <%= number_to_human_size(current_teacher.size_cap) %> used.</small></span>
+	<hr />
+	<p>Looking for Free Storage?</p>
 <!-- 	<%= @invcount %> Invites Used --><!-- 
 	<a href="#" style="float:right" onclick="jQuery.facebox({ ajax: '/invite' });return false">Invite Colleagues</a> -->
-	<div style="display:block;">
+	<div class="invite-btn">
 		<ul class="pager">
-			<li class="pull-right">
-				<a href="#" onclick="jQuery.facebox({ ajax: '/invite' });return false">Invite &rarr;</a>
+			<li class="next">
+				<a href="#" onclick="jQuery.facebox({ ajax: '/invite' });return false">Invite Colleagues&rarr;</a>
 			</li>
 		</ul>
 	</div>
