--- a/app/assets/stylesheets/home/pub/about.css.erb
+++ b/app/assets/stylesheets/home/pub/about.css.erb
@@ -1,8 +1,8 @@
 .splashback {
-  background-image: url('<%= asset_path "public/product/bk.jpg" %>');
+  background-image: url('<%= asset_path "public/product/applefinal.jpg" %>');
   background-repeat:no-repeat;
   background-position:center top; 
-  background-color:#5BA3B9;
+  background-color:#fff;
 
   height:250px;
   border-bottom:1px solid #aaa;
