--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -6,7 +6,7 @@
 	<div class="container">
 
 		<div class="tagline">
-			Find & build great resources. Collaborate. Save time.<br /><br />
+			Save time & focus on what you do best — educating.<br /><br />
 			Meet your new learning network.
 		</div>
 
