--- a/app/views/home/pioneers.html.erb
+++ b/app/views/home/pioneers.html.erb
@@ -1,2 +1,70 @@
-<h2>app/views/<%= params[:controller] %>/<%= params[:action] %></h2>
-<h2><%= params[:controller] %>#<%= params[:action] %></h2>
+<% content_for :headcon do %>
+    <%= stylesheet_link_tag    "home/pub/pioneers", :media => "all" %>
+<% end %>
+
+
+<div class="splashback">
+	<div class="container">
+
+		<div class="tagline">
+			Meet the educators that are revolutionizing<br />classrooms around the world.
+		</div>
+
+	</div>
+</div>
+
+
+<div class="container">
+	<div class="watchnxt">
+		<div class="nounce">
+			Meet more pioneers
+		</div>
+
+		<li>
+			<a href="#">
+				<center>
+					<img src="http://img.cla.co/1b6ced3671b8773496f2c3961e2ae536/thumb_lg.png" />
+					<div>Jennie Doughterty</div>
+				</center>
+			</a>
+		</li>
+
+		<li>
+			<a href="#">
+				<center>
+					<img src="http://img.cla.co/1b6ced3671b8773496f2c3961e2ae536/thumb_lg.png" />
+					<div>Jennie Doughterty</div>
+				</center>
+			</a>
+		</li>
+
+		<li>
+			<a href="#">
+				<center>
+					<img src="http://img.cla.co/1b6ced3671b8773496f2c3961e2ae536/thumb_lg.png" />
+					<div>Jennie Doughterty</div>
+				</center>
+			</a>
+		</li>
+
+
+	</div>
+
+
+	<div class="vidbox">
+
+
+		<iframe style="border-radius: 6px !important;" width="675" height="400" src="http://www.youtube.com/embed/99Ip6r49MvU" frameborder="0" allowfullscreen></iframe>
+
+		<div class="pname">Jennie Dougherty <span style="color:#999; font-weight:normal">Pioneer Chat</span></div>
+
+		<div class="well">Jennie is a 9th grade english teacher from New York. She is the founder of edUpgrade, a revolutionary project that is connecting educators with much needed technology.<br /><br />
+			<h2><a href="#" style="font-weight:bolder">Visit Jennie Dougherty!</a></h2>
+		</div>	
+
+
+
+	</div>
+
+
+</div>
