--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,14 @@
 		</div>
 
 
+
+		<!-- this should only show up for public pages -->
+		<div class="container">
+			<br /><br /><br />
+		</div>
+		<!-- pub footer end -->
+
+
 		<div class="container">
 			<div style="clear:both"></div>
 
