--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -86,3 +86,68 @@
 		</center>
 	</div>
 </div>
+
+
+
+
+		<div class="container pubfoot">
+			<div class="tribox">
+				<a href="/pioneers">
+					<div class="pioneertitle">
+						Meet the pioneers on Claco
+					</div>
+
+					<div class="conr">
+						<center>
+							<img class="pcht" src="http://img.cla.co/1b6ced3671b8773496f2c3961e2ae536/thumb_lg.png" />
+							<div class="tname"></div>
+						</center>
+					</div>
+				</a>
+			</div>
+
+
+
+<div class="tribox">
+	<a href="http://blog.claco.com/" target="_blank">
+		<div class="pioneertitle">
+			Latest from our blog
+		</div>
+
+		<div class="conr">
+			<div class="blogt"></div>
+			<div class="blogtext">
+
+				Loading...
+
+			</div>
+		</div>
+	</a>
+</div>
+
+
+
+<div class="tribox" style="border-right:none">
+	<div style="font-size:30px; font-weight:bolder; color:#555; line-height:38px; margin-left:10px">
+		We <span style="font-size:40px; color:#F70808">♥</span> educators!
+	</div>
+
+	<div class="pioneertitle" style="margin:15px 5px 0 10px">
+		Spread the love :)
+	</div>
+
+	<div class="conr" style="margin-left:10px">
+		<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.claco.com&amp;send=false&amp;layout=box_count&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=90&amp;appId=213954741999891" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:50px; height:70px; margin-right:10px" allowTransparency="true"></iframe>
+
+		<iframe allowtransparency="true" frameborder="0" marginwidth="0" scrolling="no" src="https://plusone.google.com/_/+1/fastbutton?url=http%3A%2F%2Fwww.claco.com%2F&amp;size=tall&amp;count=true&amp;annotation=&amp;width=120&amp;hl=en-US&amp;jsh=m%3B%2F_%2Fapps-static%2F_%2Fjs%2Fwidget%2F__features__%2Frt%3Dj%2Fver%3DSXEYxs5FO0c.en_US.%2Fsv%3D1%2Fam%3D!KW4lzGmbF_KIhSW8Og%2Fd%3D1%2F#id=I1_1327178530968&amp;parent=http%3A%2F%2Fwww.claco.com&amp;rpctoken=350075819&amp;_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe" style="border:none; overflow:hidden; width:50px; height:70px;margin-bottom:-1px;margin-right:10px" title="+1"></iframe>
+
+		<iframe allowtransparency="true" frameborder="0" scrolling="no" src="//platform.twitter.com/widgets/tweet_button.html?count=vertical&text=I'm a pioneer! %23UnitedWeTeach&url=http://www.claco.com" style="width:55px; height:70px;"></iframe>
+	</div>
+	
+</div>
+
+
+
+<div style="clear:both"></div>
+
+</div>
