--- a/app/assets/stylesheets/home/public.css.erb
+++ b/app/assets/stylesheets/home/public.css.erb
@@ -314,3 +314,66 @@
 	margin-left:10px;
 	margin-bottom:11px;
 }
+
+
+
+
+
+
+
+
+.pubfoot {
+  margin-top:15px;
+  margin-bottom:30px;
+}
+
+.pubfoot .tribox {
+  float:left;
+  width:280px;
+  height:160px;
+  border-right:1px solid #ddd;
+  padding: 5px 15px 15px 15px;
+  overflow:hidden;
+}
+
+.pubfoot .tribox .pioneertitle {
+  font-size:14px;
+  font-weight:bolder;
+  color:#666;
+  text-shadow:0 1px 0 #fff;
+}
+
+.pubfoot .tribox .conr {
+  padding-top:10px;
+  opacity: 0.70;
+  filter: alpha(opacity=70);
+}
+
+.pubfoot .tribox:hover .conr {
+    opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.pubfoot .tribox .pcht {
+  border:6px solid #fff;
+  -webkit-box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
+}
+
+.pubfoot .tribox:hover .pcht {
+  border:6px solid #fff;
+  -webkit-box-shadow: 0 0px 6px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 0px 6px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0px 6px rgba(0, 0, 0, 0.3);
+}
+
+.pubfoot .tribox .conr .blogt {
+  font-size:16px;
+  font-weight:bolder;
+}
+
+.pubfoot .tribox .conr .blogtext {
+  font-size:12px;
+  color:#666;
+}
