--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,11 +38,6 @@
 
 
 
-		<!-- this should only show up for public pages -->
-		<div class="container">
-			<br /><br /><br />
-		</div>
-		<!-- pub footer end -->
 
 
 		<div class="container">
@@ -78,6 +73,13 @@
 		<%= javascript_include_tag "tooltip" %>
 
 		<% end %>
+
+
+		<% if params[:controller] == "home" &&  !signed_in? %>
+			<%= javascript_include_tag "home/pub" %>
+		<% end %>
+
+
 		<%= javascript_tag "page = '#{params[:controller]}##{params[:action]}'; loggedin = #{signed_in?}" %>
 
 		<script type="text/javascript">
