--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -7,4 +7,5 @@
 <a href="/admin/users">Users</a><br />
 <a href="/admin/invites">Invites</a><br />
 <a href="/admin/fpfeatured">Pick Front Page Binders</a><br />
-<a href="/admin/featured">Pick Featured Binders</a>
+<a href="/admin/featured">Pick Featured Binders</a><br />
+<a href="/admin/pioneer">Pick Pioneerchat Binder</a>
