--- a/app/assets/stylesheets/buttons/buttons.css.erb
+++ b/app/assets/stylesheets/buttons/buttons.css.erb
@@ -130,7 +130,6 @@ a.zocial {
 .zocial.bitcoin,
 .zocial.cloudapp,
 .zocial.dropbox,
-.zocial.email,
 .zocial.eventful,
 .zocial.github,
 .zocial.gmail,
@@ -161,8 +160,6 @@ a.zocial {
 .zocial.bitcoin:hover,
 .zocial.dropbox:focus,
 .zocial.dropbox:hover,
-.zocial.email:focus,
-.zocial.email:hover,
 .zocial.eventful:focus,
 .zocial.eventful:hover,
 .zocial.github:focus,
@@ -247,7 +244,7 @@ a.zocial {
 .zocial.disqus:before {content: "\E030";}
 .zocial.dribbble:before {content: "\E023";}
 .zocial.dropbox:before {content: "\E043"; color: #1f75cc;}
-.zocial.email:before {content: "\E03C"; color: #312c2a;}
+.zocial.email:before {content: "\E03C";}
 .zocial.eventasaurus:before {content: "\E055"; color: #9de428;}
 .zocial.eventbrite:before {content: "\E05B";}
 .zocial.eventful:before {content: "\E006"; color: #0066CC;}
@@ -333,7 +330,7 @@ a.zocial {
 .zocial.disqus {background-color: #5d8aad;}
 .zocial.dribbble {background-color: #ea4c89;}
 .zocial.dropbox {background-color: #fff; color: #312c2a;}
-.zocial.email {background-color: #f0f0eb; color: #312c2a;}
+.zocial.email {background-color: #888;}
 .zocial.eventasaurus {background-color: #192931; color: #fff;}
 .zocial.eventbrite {background-color: #ff5616;}
 .zocial.eventful {background-color: #fff; color: #47ab15;}
