--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -95,7 +95,7 @@
 	<div class="invite-btn">
 		<ul class="pager">
 			<li class="next">
-				<a href="#" onclick="jQuery.facebox({ ajax: '/invite' });return false">Invite Colleagues&rarr;</a>
+				<a href="#" onclick="jQuery.facebox($('#inviteForm'));$('#inviteForm').show();return false">Invite Colleagues&rarr;</a>
 			</li>
 		</ul>
 	</div>
@@ -155,3 +155,44 @@
 
     </form>
   </div>
+
+  <div id="inviteForm" style="display: none;">
+  <div class="headtitle">
+    Invite colleagues
+    <a href="#" onClick="closefBox()" class="btn btn-mini pull-right">X</a>
+  </div>
+
+  <div class="errorBox"></div>
+  <div class="conitem">
+    <%= image_tag("invite.png", {:style => "margin:auto;display:block"}) %>
+    <div style="overflow: hidden;">
+      <blockquote>
+        <p>Invite people, get free storage.</p>
+        <small>You both get 300MB extra storage for free.</small>
+      </blockquote>
+    </div>
+    <div id="url-inviter">
+      <div class="input-prepend url-container" style="">
+        <span class="add-on" style="margin-right:-14px">
+          <img alt="Link" src="/assets/binders/link.png" style="height:14px; margin-top:-4px">
+        </span>
+
+        <input type="text" onclick="$(this).select();" style="" value="http://www.claco.com/join?ref=<%= current_teacher.id.to_s %>" readonly="readonly">
+      </div>
+      <div class="invite-btn-grp">
+        <a class="zocial twitter" href="https://twitter.com/intent/tweet?text=Learn+to+code+together%3A&url=<%=u "http://www.claco.com/join?ref=#{current_teacher.id.to_s}" %>&via=TeamClaco" onclick="if( !navigator.userAgent.toLowerCase().match( /(iphone|ipad|ipod|android|mini|mobi)/i ) ){window.open('https://twitter.com/intent/tweet?text=Learn+to+code+together%3A&url=<%=u "http://www.claco.com/join?ref=#{current_teacher.id.to_s}" %>&via=TeamClaco','','scrollbars=yes,width=660,height=328');return false;}" title="Twitter" target="_blank">Tweet</a>
+        <a class="zocial facebook" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p%5Btitle%5D=Learn+to+code+together&amp;p%5Burl%5D=<%=u "http://www.claco.com/join?ref=#{current_teacher.id.to_s}" %>&amp;p%5Bsummary%5D=Learn+and+teach+millions+to+code%21%21" onclick="if( !navigator.userAgent.toLowerCase().match( /(iphone|ipad|ipod|android|mini|mobi)/i ) ){window.open('http://www.facebook.com/sharer/sharer.php?s=100&amp;p%5Btitle%5D=Learn+to+code+together&amp;p%5Burl%5D=<%=u "http://www.claco.com/join?ref=#{current_teacher.id.to_s}" %>&amp;p%5Bsummary%5D=Learn+and+teach+millions+to+code%21%21','','scrollbars=yes,width=660,height=328');return false;}" title="Share on Facebook" target="_blank">Share</a>
+        <a class="zocial email" href="#" onclick="$('#url-inviter').hide();$('#bodcon').show();return false;">Email</a>
+      </div>
+    </div>
+    <form action="/invite" accept-charset="UTF-8" method="post" class="bodcon" id="bodcon">
+        <input id="invite_" name="invite[]" placeholder="Enter email address" type="email" value="">
+        <input id="invite_" name="invite[]" placeholder="Enter email address" type="email" value="">
+        <div class="buttonbar">
+           <button class="btn btn-primary btn-small" type="submit">Send invites!</button>
+           <button class="btn btn-small" onclick="$('#bodcon').hide();$('#url-inviter').show();return false;">Cancel</button>
+        </div>
+
+    </form>
+  </div>
+</div>
