ui fixes, recs enhancements

--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -39,7 +39,7 @@
 						<div class="itemwrap">
 							<div class="imgarea">
 								<a href="/<%= binder.find_owner.username %>">
-									<img src="<%= Teacher.thumb_md(binder.find_owner) %>" />
+									<img src="<%= teacher_thumb_md(binder.find_owner) %>" />
 								</a>
 							</div>
 
