--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -60,7 +60,7 @@
 
             <a href="/<%= current_teacher.username %>">
             <div id="namester">
-                <img src="<%= Teacher.thumb_sm(current_teacher) %>" class="myprofpic" />
+                <img src="<%= teacher_thumb_sm(current_teacher) %>" class="myprofpic" />
                 <div class="fname"><%= current_teacher.full_name %></div>
             </div>
             </a>
