--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -186,8 +186,8 @@
       </div>
     </div>
     <form action="/invite" accept-charset="UTF-8" method="post" class="bodcon" id="emailInviter">
-        <input id="invite_" name="invite[]" placeholder="Enter email address" type="email" value="">
-        <input id="invite_" name="invite[]" placeholder="Enter email address" type="email" value="">
+        <input id="invite_" name="invite[]" placeholder="Enter Colleague's email" type="email" value="">
+        <input id="invite_" name="invite[]" placeholder="Enter Colleague's email" type="email" value="">
         <div class="buttonbar">
            <button class="btn btn-primary btn-small" type="submit">Send invites!</button>
            <button class="btn btn-small" onclick="$('#facebox #emailInviter').hide();$('#facebox #urlInviter').show();return false;">Cancel</button>
