--- a/app/assets/javascripts/binders/folder.js.erb
+++ b/app/assets/javascripts/binders/folder.js.erb
@@ -87,7 +87,7 @@ function viewInit() {
 
 
   $('.snapbtn').click(function() {
-    popForm('snap-form', $(this).parent().parent());
+    popForm('snap-form', $(this).parent().parent().parent());
   });
   
   // CONTENT SPECIFIC FUNCTIONS GO HERE!
@@ -759,6 +759,12 @@ function popForm(formID, obje) {
         success: function(retData) {
           if (retData == 1) {
             closefBox();
+            var btn = obje.find('.snapbtn');
+            btn.addClass('btn-info');
+            // btn.find('.dropdown-toggle').addClass('btn-info');
+            var texter = btn.find('.texter');
+            texter.html('Snapped!');
+            texter.css('width', '80px');
             initAsyc('<img src=\'<%= asset_path "success.png"%>\' style=\'float:left; margin-right:15px;\' /> Snapped successfully!');
             setTimeout(function() {destroyAsyc();},1500);
 
