--- a/app/assets/stylesheets/binders/folder.css.erb
+++ b/app/assets/stylesheets/binders/folder.css.erb
@@ -1,7 +1,3 @@
-.content-header {
-  
-}
-
 .content-header .con-inner {
   height:110px;
 
@@ -970,11 +966,27 @@
 }
 
 #list-pane .content-list .content-item .drop-tog{
-  float:right;
-  margin-top:45px;
-  margin-right:15px;
+  /*margin-top:8px;*/
+  margin-right:18px;
 }
 
+.fork-count {
+  margin: 14px 0 0 0;
+  margin-right:18px;
+  float: right;
+  font-size: 10px;
+  height: 28px;
+}
+
+.fork-count a {
+  line-height: 14px;
+  padding: 2px 8px;
+}
+/*
+#list-pane .content-list .content-item .drop-tog{
+  float: right;
+}
+*/
 #list-pane .content-list .content-item .drop-tog .dropdown-menu{
   margin-left:-68px !important;
   min-width:100px !important;
@@ -1227,29 +1239,26 @@
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1); 
 }
 
-
-
-
 .snapbtn {
-  font-size: 14px;
+  font-size: 12px;
   font-weight:bolder;
-  color:#555;
-  margin-right:-2px;
+  padding: 3px 8px 3px;
+  /*color: #555;*/
+  /*margin-right:-2px;*/
 }
 
 .snapbtn img {
   float:left;
-  height:24px;
-  margin-right:3px;
+  height:16px;
 }
 
 .snapbtn .texter {
-  padding-top:3px;
-  width:62px;
+  min-width: 55px;
 }
 
-
-
+.snapbtn-group dropdown-menu {
+  margin-left: 0;
+}
 
 
 
